SERVER-11472 fix segfault in UpdateUserEvent::putParamsBSON() and both UpdateRoleEvent methods

GitOrigin-RevId: 28d19e4527f7d10eca828938a4d72ea5f02029a6